# auto-prompt-generator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  assemble-prompt.sh  assemble_prompt.sh  check-prompt-length.sh  check-prompt-size.sh  diff-with-branch.sh  directive.sh  exclude-files.sh  exclude_files.sh  extract-enclosed-types.sh  extract-enclosing-type.sh  extract-first-segment.sh  extract-instruction-content.sh  extract-types.sh  extract_instruction_content.sh  extract_types.sh  file-types.sh  filter-files-singular.sh  filter-files.sh  filter-substring-markers.sh  filter_files.sh  find-definition-files.sh  find-prompt-instruction.sh  find-referencing-files.sh  find_definition_files.sh  find_prompt_instruction.sh  generate-prompt.sh  generate_prompt  get-git-root.sh  get-package-root.sh  get-search-roots.sh  get_git_root.sh  get_package_root.sh  get_search_roots.sh  get_the_prompt.sh  (+38 more)
.cursor/rules/: commit-messages.mdc  (+1 more)
.githooks/: pre-commit
MockFiles/: ContentView.swift  TramTrackerSwiftUIApp.swift
crates/assemble_prompt/: Cargo.toml
crates/assemble_prompt/src/: file_processor.rs  lib.rs
crates/assemble_prompt/tests/: file_processor_js.rs  file_processor_marker_processing.rs  file_processor_objc.rs  file_processor_swift.rs  integration_js.rs  integration_swift.rs
crates/extract_enclosing_type/: Cargo.toml
crates/extract_enclosing_type/src/: lib.rs
crates/extract_types/: Cargo.toml
crates/extract_types/src/: lib.rs
crates/extract_types/tests/: integration_js.rs  integration_objc.rs  integration_swift.rs
crates/find_definition_files/: Cargo.toml
crates/find_definition_files/src/: lib.rs
crates/find_definition_files/src/matcher/: js.rs  mod.rs  objc.rs  swift.rs
crates/find_definition_files/tests/: integration_js.rs  integration_objc.rs  integration_swift.rs
crates/find_prompt_instruction/: Cargo.toml
crates/find_prompt_instruction/src/: lib.rs
crates/find_prompt_instruction/tests/: integration_js.rs  integration_swift.rs
crates/generate_prompt/: Cargo.toml
crates/generate_prompt/src/: clipboard.rs  config.rs  file_selector.rs  git_utils.rs  instruction_locator.rs  lib.rs  main.rs  prompt_generator.rs  prompt_validation.rs  search_root.rs  services.rs
crates/generate_prompt/tests/: characterize_env_seams.rs  characterize_stdout.rs  integration_js.rs  integration_misc.rs  integration_objc.rs  integration_swift.rs
crates/substring_marker_snippet_extractor/: Cargo.toml
crates/substring_marker_snippet_extractor/src/: lib.rs
crates/substring_marker_snippet_extractor/src/processor/: file_processor.rs  mod.rs
crates/substring_marker_snippet_extractor/src/utils/: marker_utils.rs  mod.rs
crates/substring_marker_snippet_extractor/tests/: integration_js.rs  integration_objc.rs  integration_swift.rs  public_marker_processing.rs
diff_with_branch/: Cargo.toml
extract_enclosing_function/: Cargo.toml
extract_enclosing_type/: Cargo.toml
extract_types/: Cargo.toml
filter_files_singular/: Cargo.toml
filter_substring_markers/: Cargo.toml
find_prompt_instruction/: Cargo.toml
find_referencing_files/: Cargo.toml
generate_prompt/: Cargo.toml
get_git_root/: Cargo.toml
get_search_roots/: Cargo.toml
prompt_file_processor/: Cargo.toml
release/: generate-prompt.sh
rust/: Cargo.toml  build_universal.sh
rust/assemble_prompt/: Cargo.toml
rust/assemble_prompt/src/: lib.rs  main.rs
rust/assemble_prompt/tests/: assemble_prompt.rs  integration_js.rs  integration_swift.rs
rust/check_prompt_size/: Cargo.toml
rust/check_prompt_size/src/: main.rs
rust/diff_with_branch/: Cargo.toml
rust/diff_with_branch/src/: main.rs
rust/diff_with_branch/tests/: integration_test.rs
rust/extract_enclosing_function/: Cargo.toml
rust/extract_enclosing_function/src/: lib.rs  main.rs
rust/extract_enclosing_type/src/: lib.rs  main.rs
rust/extract_instruction_content/: Cargo.toml
rust/extract_instruction_content/src/: lib.rs  main.rs
rust/extract_types/: Cargo.toml
rust/extract_types/src/: lib.rs  main.rs
rust/filter_excluded_files/: Cargo.toml
rust/filter_excluded_files/src/: lib.rs  main.rs
rust/filter_files/: Cargo.toml
rust/filter_files/src/: main.rs
rust/filter_files_singular/: Cargo.toml
rust/filter_files_singular/src/: lib.rs  main.rs
rust/filter_substring_markers/: Cargo.toml
rust/filter_substring_markers/src/: lib.rs  main.rs
rust/find-prompt-instruction/: Cargo.toml
rust/find-prompt-instruction/src/: main.rs
rust/find_definition_files/: Cargo.toml
rust/find_definition_files/src/: lib.rs  main.rs
rust/find_definition_files/tests/: integration_js.rs  integration_swift.rs
rust/find_prompt_instruction/: Cargo.toml
rust/find_prompt_instruction/src/: lib.rs
rust/find_prompt_instruction/tests/: integration_js.rs  integration_swift.rs
rust/find_referencing_files/: Cargo.toml
rust/find_referencing_files/src/: lib.rs  main.rs
rust/generate_prompt/: Cargo.toml
rust/generate_prompt/src/: main.rs
rust/generate_prompt/tests/: generate_prompt_tests.rs  integration_js.rs  integration_swift.rs
rust/get_git_root/src/: main.rs
rust/get_package_root/: Cargo.toml
rust/get_package_root/src/: lib.rs  main.rs
rust/get_search_roots/: Cargo.toml
rust/get_search_roots/src/: lib.rs  main.rs
rust/log_file_sizes/: Cargo.toml
rust/log_file_sizes/src/: main.rs
rust/prompt_file_processor/: Cargo.toml
rust/prompt_file_processor/src/: lib.rs  main.rs
rust/prompt_file_processor/tests/: integration_js.rs  integration_swift.rs
rust/substring_marker_snippet_extractor/: Cargo.toml
rust/substring_marker_snippet_extractor/src/: lib.rs
rust/substring_marker_snippet_extractor/tests/: integration_js.rs  integration_swift.rs
rust/suggest_exclusions/: Cargo.toml
rust/suggest_exclusions/src/: main.rs
rust/unescape_newlines/: Cargo.toml
rust/unescape_newlines/src/: lib.rs  main.rs
scripts/: code-review.sh  coverage-compare.sh  diff_each.sh  fix-headers.sh  fix-log-levels.sh  install-hooks.sh  is-this-right.sh  meta-context.sh  regenerate-assemble-prompt.sh  replace_logging.sh
(+72 files in other folders)
