[workspace]
members = [
    "check_prompt_size",
    "filter_files_singular",
    "filter_substring_markers",
    "extract_enclosing_function",
    "log_file_sizes",
    "filter_excluded_files",
    "extract_enclosing_type",
    "diff_with_branch",
    "unescape_newlines",
    "find-prompt-instruction",
    "extract_types",
    "extract_instruction_content",
    "get_package_root",
    "find_referencing_files",
    "filter_files",
    "get_git_root"
  , "get_search_roots"]
resolver = "2"

[workspace.dependencies]
regex = "1.7"
tempfile = "3.3"
