[workspace]
members = [
    "filter_files_singular",
    "filter_substring_markers",
    "filter_excluded_files",
    "extract_enclosing_type",
    "diff_with_branch",
    "unescape_newlines",
    "find_prompt_instruction",
    "extract_types",
    "extract_instruction_content",
    "get_package_root",
    "find_referencing_files",
    "get_git_root",
    "get_search_roots",
    "find_definition_files",
    "prompt_file_processor",
    "assemble_prompt",
    "generate_prompt"
    ]
resolver = "2"

[workspace.dependencies]
regex = "1.7"
tempfile = "3.3"
walkdir = "2.3"
assert_cmd = "2.0"
predicates = "2.1"
anyhow = "1.0"
tree-sitter = "=0.25.2"
tree-sitter-swift = "=0.7.0"
filetime = "0.2"
rand = "0.8"
