[package]
name = "assemble_prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
substring_marker_snippet_extractor = { path = "../substring_marker_snippet_extractor" }
unescape_newlines = { path = "../unescape_newlines" }
diff_with_branch = { path = "../diff_with_branch" }
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
