[package]
name = "extract_enclosing_type"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
lang_support = { path = "../lang_support" }
todo_marker = { path = "../todo_marker" }
tree-sitter = { workspace = true }
tree-sitter-swift = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
