[package]
name = "extract_types"
version = "0.1.0"
edition = "2021"

[dependencies]
substring_marker_snippet_extractor = { path = "../substring_marker_snippet_extractor" }
regex = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
