[package]
name = "extract_types"
version = "0.1.0"
edition = "2021"

[dependencies]
substring_marker_snippet_extractor = { path = "../substring_marker_snippet_extractor" }
todo_marker = { path = "../todo_marker" }
lang_support = { path = "../lang_support" }
regex = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
