[package]
name = "find_definition_files"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { workspace = true }
walkdir = { workspace = true }
get_search_roots = { path = "../get_search_roots" }
lang_support = { path = "../lang_support" }

[dev-dependencies]
tempfile = { workspace = true }
