[package]
name = "find_prompt_instruction"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
lang_support = { path = "../lang_support" }
todo_marker = { path = "../todo_marker" }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
filetime = { workspace = true }

