[package]
name = "generate_prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] } 
anyhow = { workspace = true }
generate_prompt_core = { path = "../generate_prompt_core" }
get_git_root = { path = "../get_git_root" }
unescape_newlines = { path = "../unescape_newlines" }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
filetime = { workspace = true }
assert_fs = { workspace = true }
