[package]
name = "substring_marker_snippet_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
todo_marker = { path = "../todo_marker" }
regex = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
