[package]
name = "assemble_prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
prompt_file_processor = { path = "../prompt_file_processor" }
unescape_newlines = { path = "../unescape_newlines" }
diff_with_branch = { path = "../diff_with_branch" }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
