[package]
name = "extract_types"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-swift = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
