[package]
name = "generate_prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tempfile = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }
get_package_root = { path = "../get_package_root" }
extract_instruction_content = { path = "../extract_instruction_content" }
filter_substring_markers = { path = "../filter_substring_markers" }
get_search_roots = { path = "../get_search_roots" }
get_git_root = { path = "../get_git_root" }
find_prompt_instruction = { path = "../find_prompt_instruction" }
prompt_file_processor = { path = "../prompt_file_processor" }
diff_with_branch = { path = "../diff_with_branch" }
filter_excluded_files = { path = "../filter_excluded_files" }
extract_types = { path = "../extract_types" }
filter_files_singular = { path = "../filter_files_singular" }
unescape_newlines = { path = "../unescape_newlines" }
extract_enclosing_type = { path = "../extract_enclosing_type" }
find_referencing_files = { path = "../find_referencing_files" }
extract_enclosing_function = { path = "../extract_enclosing_function" }
find_definition_files = { path = "../find_definition_files" }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
