[package]
name = "prompt_file_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
extract_enclosing_function = { path = "../extract_enclosing_function" }
filter_substring_markers = { path = "../filter_substring_markers" }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
